Fix Bug 439218 - Quoted strings containing comma or brackets are not parsed correctly, causes message sending to fail

BUG: 439218
FIXED-IN: 5.18.0